--- a/css/nueva-cita.css
+++ b/css/nueva-cita.css
@@ -1,10 +1,10 @@
 *{
   box-sizing: border-box;
+  font-family: "Bree Serif", serif, Arial;
 }
 
 body {
   display: flex;
-  font-family: "Bree Serif", serif, Arial;
   flex-direction: column;
   height: 100vh; /* Hace que el body ocupe toda la altura de la ventana */
 }
@@ -23,6 +23,7 @@ header {
   justify-content: center; /* Centra el contenido horizontalmente */
   padding: 20px;
   
+  
 }
 
 #formulario-nueva-cita {
@@ -34,6 +35,12 @@ header {
   max-width: 800px; 
   padding: 20px;
   width: 80%; /* Ajustar el ancho para que ocupe más espacio */
+}
+
+.form-control:focus{
+  border: 2px solid #3a72be;
+  outline: none;
+  box-shadow: 3px 0px 30px rgba (163,163,163, 0.4);
 }
 
 h2{
@@ -59,6 +66,7 @@ h3{
 .mb-3 label {
   flex: 1;
   text-align: left;
+  cursor: pointer;
 }
 
 .mb-3 input, .mb-3 textarea {
@@ -76,19 +84,19 @@ input, textarea{
 }
 
 #enviar {
-  font-family: "Bree Serif", serif, Arial;
   font-size: 20px;
   padding: 10px 20px;
-  margin-top: 20px;
   background-color: #3a72be;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 #enviar:hover {
-  background-color: #f89de7;
+  box-shadow: 3px 0px 30px rgba(163, 163, 163, 2);
+  
 }
 
 footer {
