--- a/css/modificar-cita.css
+++ b/css/modificar-cita.css
@@ -1,3 +1,5 @@
+/*Estilos*/
+
 * {
   box-sizing: border-box;
 }
@@ -161,7 +163,6 @@ footer {
     display: flex;
     align-items: center;
   }
-
 
   footer {
     display: flex;
