--- a/css/citas-registradas.css
+++ b/css/citas-registradas.css
@@ -8,7 +8,8 @@ body {
   font-family: "Bree Serif", serif, Arial;
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Hace que el body ocupe toda la altura de la ventana */
+  height: 100vh;
+  /* Hace que el body ocupe toda la altura de la ventana */
 }
 
 header {
@@ -19,57 +20,44 @@ header {
 }
 
 main {
-  display:grid;
+  display: grid;
   justify-content: center;
   align-content: center;
-  padding: 20px; /* Añadir margen a los lados */
   height: 100%;
 }
 
-#tabla-citas{
+#tabla-citas {
   border-collapse: collapse;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   margin: 0
 }
 
-h2{
+h2 {
   text-align: center;
   margin-bottom: 15px;
 }
 
 thead {
-  background-color: #27aae1;
+  background-color: #3a72be;
   color: #fff;
 
 }
 
+
 th,
 td {
-  padding: 12px 15px;
+  padding: 10px 15px;
   text-align: center;
-  border-bottom: 1px solid #ddd;
   border: 1px solid #ddd;
 
 }
 
 th {
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 13px;
 }
 
-.botones {
-  background-color: #111111;
-  color: white;
-  border: none;
-  padding: 6px 10px;
-  cursor: pointer;
-  border-radius: 4px;
-}
-
-.botones:focus {
-  background-color: #27aae1;
-}
 
 footer {
   background-color: #e6ecf1;
@@ -88,9 +76,11 @@ footer {
 
 #logo-footer a {
   align-items: center;
-  color: inherit;/* Mantiene el color del enlace */
+  color: inherit;
+  /* Mantiene el color del enlace */
   display: flex;
-  text-decoration: none;/* Elimina el subrayado del enlace */
+  text-decoration: none;
+  /* Elimina el subrayado del enlace */
 }
 
 #contacto {
@@ -120,54 +110,36 @@ footer {
 }
 
 /* Media Queries para hacer la página responsive */
-@media (max-width: 910px) {
+@media (max-width: 900px) {
+
   #tabla-citas {
-    display: block;
-    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
   }
 
-  thead {
-    display: none;
-  }
 
+  tbody{
+    display: flex;
+  }
+  
   tr {
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    background-color: #fff;
-  }
- 
-  td {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-    position: relative;
-    text-align: left;
-    width: 100%;
+    
   }
 
-  td::before {
-    content: attr(data-label);
-    flex: 1;
-    font-weight: bold;
-    text-align: left;
-    padding-right: 10px;
-    color: #27aae1;
-    border-right: 1px solid #ddd; /* Línea vertical */
-    margin-right: 10px; /* Espacio entre la línea y el texto */
-    height: 100%; /* Asegura que la línea vaya de arriba a abajo */
-    display: flex;
-    align-items: center;
-  }
+  th,
+  td {
+    padding: 8px; 
+    text-align: left; /* Alineación del texto a la izquierda */
+    
+    }
+
 
   footer {
     display: flex;
     flex-direction: column;
-
   }
 
   #logo-footer {
@@ -179,4 +151,5 @@ footer {
     display: flex;
     justify-content: center;
   }
+
 }
