--- a/css/nueva-cita.css
+++ b/css/nueva-cita.css
@@ -34,7 +34,7 @@ header {
   width: 80%; /* Ajustar el ancho para que ocupe más espacio */
 }
 
-.form-control:focus{
+.datos-usu:focus{
   border: 2px solid #3a72be;
   outline: none;
   box-shadow: 3px 0px 30px rgba (163,163,163, 0.4);
@@ -49,23 +49,23 @@ h2, h3{
   padding-bottom: 20px;
 }
 
-h3{
+.cita{
   margin-bottom:5px;
   color: #3a72be;
 }
 
-.mb-3 {
+.campos {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
 }
 
-.mb-3 label {
+.campos label {
   text-align: left;
   cursor: pointer;
 }
 
-.mb-3 input, .mb-3 textarea {
+.campos input {
   padding: 8px;
   margin: 5px 0;
 }
@@ -80,12 +80,7 @@ input, textarea{
   margin-top: 5px; 
 }
 
-.guardar-cita {
-  text-align: center;
-  margin-top: 20px;
-}
-
-#enviar {
+#enviar{
   font-size: 20px;
   padding: 10px 20px;
   background-color: #3a72be;
@@ -100,6 +95,28 @@ input, textarea{
   box-shadow: 3px 0px 30px rgba(163, 163, 163, 2);
   
 }
+
+#borrar{
+  font-size: 20px;
+  padding: 10px 20px;
+  background-color: #f89de7;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+#borrar:hover {
+  box-shadow: 3px 0px 30px rgba(163, 163, 163, 2);
+  
+}
+
+.enviarBorrar{
+  display: flex;
+  justify-content: center;
+}
+
 
 footer {
   background-color: #e6ecf1;
